add error code dictionary to esign docs

--- a/content/data/esign/flexi-esign.mdx
+++ b/content/data/esign/flexi-esign.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 
 The signing config is a JSON that specifies on which pages and at what coordinates the specific user has to sign. The size of the signer's rectangle.
 
--   Signing config allows you to sing at multiple places on same page.
+-   Signing config allows you to sign at multiple places on same page.
 -   Sign at multiple places on different pages.
 -   Sign at any coordinate on a page.
 
