--- a/content/data/account-aggregator/v1/quickstart.mdx
+++ b/content/data/account-aggregator/v1/quickstart.mdx
@@ -5,7 +5,7 @@ order: 1
 visible_in_sidebar: true
 ---
 
-## Quickstart Guide
+## Quickstart Guide-v1
 
 Here is a quick summary of steps to help you integrate with Setu’s AA. Before you start, there are some key terms that will be referred to periodically in the documentation—
 
