--- a/content/data/account-aggregator/v1/overview.mdx
+++ b/content/data/account-aggregator/v1/overview.mdx
@@ -5,7 +5,7 @@ order: 0
 visible_in_sidebar: true
 ---
 
-## Account Aggregator
+## Account Aggregator- v1
 
 Account aggregators(AAs) are <a href="https://www.rbi.org.in/Scripts/bs_viewcontent.aspx?Id=3142" target="_blank">regulated entities</a> that facilitate consented sharing of financial data by utilising the <a href="http://www.niti.gov.in/node/1299" target="_blank">DEPA</a> framework. They act as the bridge between data providers such as banks, and data consumers such as lenders—to enable the sharing of a user’s financial data based on their explicit consent. Setu currently provides AA-related services in close partnership with a <a href="https://www.onemoney.in/" target="_blank">fully-licensed AA.</a>
 
