renaming entities- Setu Insights

--- a/content/data/bank-statement-analyser/quickstart.mdx
+++ b/content/data/bank-statement-analyser/quickstart.mdx
@@ -46,8 +46,8 @@ Create an FI Datablock in Setu's Insights module by making a POST call to `/v1/f
 
 ### Step 3 - Generate Insights
 
--   Generate Insights by making an API call to `/v1/insight`, with the report ID, and a list of data IDs in the payload
--   The API will post an asynchronous job and return a Job ID, which can later be used to obtain the insights generated
+-   Generate Insights by making an API call to `/v1/insight`, with the template ID, and a list of data IDs in the payload
+-   The API will post an asynchronous job and return a Report ID, which can later be used to obtain the insights generated
 -   Setu will post a <a href="/data/bank-statement-analyser/quickstart/notifications" target="_blank">notification</a> to the **notification endpoint** <a href="/data/account-aggregator/quickstart#integrating-fiu-apis-on-sandbox" target="_blank">configured for the FIU app</a>, along with the generated insights
 
 <hr className="primary" />
