--- a/content/data/bank-statement-analyser/quickstart.mdx
+++ b/content/data/bank-statement-analyser/quickstart.mdx
@@ -24,6 +24,8 @@ Here is a quick summary of steps to help you integrate with Setu’s Insights AP
 
 ![](https://storage.googleapis.com/strapi-assets/latest/setu-bsa-how-it-works-2/setu-bsa-how-it-works-2.png)
 
+<br/>
+
 ### Step 1 - Report creation
 
 FIU needs to send in the below information to be configured to [insights@setu.co](mailto:insights@setu.co)
@@ -34,15 +36,19 @@ FIU needs to send in the below information to be configured to [insights@setu.co
 
 Setu will create a report template on your behalf and share a `Report ID`, which can be used when [generating insights](#step-3-generate-insights)
 
+<br/>
+
 ### Step 2 - AA Gateway integration
 
-#### Create FI-Datablocks
+##### Create FI-Datablocks
 
 Create an FI Datablock in Setu's Insights module by making a POST call to `/v1/fi_data` with the data fetched from the AA
 
 -   The payload should be the same data fetched from the FIP. The schema of this data is validated against the [ReBIT schema](https://api.rebit.org.in/schema)
 -   The API returns a `Data ID` for the datablock along with some metadata, which can be used when [generating insights](#step-3-generate-insights)
 -   A list of available data blocks can also be obtained by making a GET call to `/v1/fi_data`
+
+<br/>
 
 ### Step 3 - Generate Insights
 
