--- a/content/data/bank-statement-analyser/quickstart.mdx
+++ b/content/data/bank-statement-analyser/quickstart.mdx
@@ -24,6 +24,8 @@ Here is a quick summary of steps to help you integrate with Setu’s Insights AP
 
 ![](https://storage.googleapis.com/strapi-assets/latest/setu-bsa-how-it-works-2/setu-bsa-how-it-works-2.png)
 
+<br/>
+
 ### Step 1 - Report creation
 
 FIU needs to send in the below information to be configured to [insights@setu.co](mailto:insights@setu.co)
@@ -34,9 +36,11 @@ FIU needs to send in the below information to be configured to [insights@setu.co
 
 Setu will create a report template on your behalf and share a `Report ID`, which can be used when [generating insights](#step-3-generate-insights)
 
+<br/>
+
 ### Step 2 - AA Gateway integration
 
-#### Create FI-Datablocks
+##### Create FI-Datablocks
 
 Create an FI Datablock in Setu's Insights module by making a POST call to `/v1/fi_data` with the data fetched from the AA
 
@@ -44,10 +48,12 @@ Create an FI Datablock in Setu's Insights module by making a POST call to `/v1/f
 -   The API returns a `Data ID` for the datablock along with some metadata, which can be used when [generating insights](#step-3-generate-insights)
 -   A list of available data blocks can also be obtained by making a GET call to `/v1/fi_data`
 
+<br/>
+
 ### Step 3 - Generate Insights
 
--   Generate Insights by making an API call to `/v1/insight`, with the report ID, and a list of data IDs in the payload
--   The API will post an asynchronous job and return a Job ID, which can later be used to obtain the insights generated
+-   Generate Insights by making an API call to `/v1/insight`, with the template ID, and a list of data IDs in the payload
+-   The API will post an asynchronous job and return a Report ID, which can later be used to obtain the insights generated
 -   Setu will post a <a href="/data/bank-statement-analyser/quickstart/notifications" target="_blank">notification</a> to the **notification endpoint** <a href="/data/account-aggregator/quickstart#integrating-fiu-apis-on-sandbox" target="_blank">configured for the FIU app</a>, along with the generated insights
 
 <hr className="primary" />
