--- a/content/data/bank-statement-analyser/quickstart.mdx
+++ b/content/data/bank-statement-analyser/quickstart.mdx
@@ -9,8 +9,8 @@ visible_in_sidebar: true
 
 Here is a quick summary of steps to help you integrate with Setu’s Insights API. Before you start, there are some key terms that will be referred to periodically in the documentation—
 
--   **FI Datablock**— FI Datablocks is the data received from the FIP (Financial Information Provider), via the AA. Currently, we only support bank statement data.
--   **Report**— A report is the template in which you want the insights to be generated. You can pick and choose exactly what modules should be added to a report based on their needs. For example, if you only want to get the income and expenses of a customer, the report can contain only those two modules.
+-   **FI Datablock**— FI Datablocks are the data received from the FIP (Financial Information Provider), via the AA. Currently, we only support bank statement data.
+-   **Template**— A template is a pre-configured format, that outlines the structure and organization of the generated report, including which insights to generate. You can pick and choose exactly what modules should be added to a template based on your needs. For example, if you only want to generate the income and expense insights of a customer, the template can contain only those two modules.
 
 <Callout type="tip">
     Please refer to the Account Aggregator's{" "}
@@ -24,19 +24,19 @@ Here is a quick summary of steps to help you integrate with Setu’s Insights AP
 
 ![](https://storage.googleapis.com/strapi-assets/latest/setu-bsa-how-it-works-2/setu-bsa-how-it-works-2.png)
 
-<br/>
+<br />
 
-### Step 1 - Report creation
+### Step 1 - Template creation
 
 FIU needs to send in the below information to be configured to [insights@setu.co](mailto:insights@setu.co)
 
 -   **FIU ID** received from the integration with AA
--   **Name** for the report, and a list of required <a href="/data/bank-statement-analyser/postman" target="_blank">**Insights**</a>
--   **Format** of the report's output (currently defaults to `JSON`)
+-   **Name** for the template, and a list of required <a href="/data/bank-statement-analyser/postman" target="_blank">**Insights**</a>
+-   **Format** of the template's output (currently defaults to `JSON`)
 
-Setu will create a report template on your behalf and share a `Report ID`, which can be used when [generating insights](#step-3-generate-insights)
+Setu will create a template on your behalf and share a `Template ID`, which can be used when [generating insights](#step-3-generate-insights)
 
-<br/>
+<br />
 
 ### Step 2 - AA Gateway integration
 
@@ -48,7 +48,7 @@ Create an FI Datablock in Setu's Insights module by making a POST call to `/v1/f
 -   The API returns a `Data ID` for the datablock along with some metadata, which can be used when [generating insights](#step-3-generate-insights)
 -   A list of available data blocks can also be obtained by making a GET call to `/v1/fi_data`
 
-<br/>
+<br />
 
 ### Step 3 - Generate Insights
 
