--- a/content/data/insights/postman.mdx
+++ b/content/data/insights/postman.mdx
@@ -5,7 +5,7 @@ order: 2
 visible_in_sidebar: true
 ---
 
-## Test Insights APIs with Postman
+## Test Setu Insights APIs with Postman
 
 #### Download and set up Postman
 
@@ -15,15 +15,16 @@ Download and setup the <a href="https://www.postman.com/downloads" target="_blan
 
 <Callout type="tip">
     To edit environment variables in Postman, click on the Environments and go
-    to <strong>bsa</strong>.
+    to <strong>Sandbox</strong>.
 </Callout>
 
 <br />
 
-Postman environment comes wth default test credentials. Set the following variables in the environment on Postman—
+Postman environment comes wth default test credentials, which are passed as headers for every request in the <a href="https://www.postman.com/setu-devs/workspace/data-insights-public/collection/15939114-44fcb9cc-0623-47a9-a195-1e2b30c66158" target="_blank">collection</a>. Set the following variables in the environment on Postman—
 
--   Set `client_id` to the FIU app client ID received from our support team.
--   Set `client_secret` to the FIU app client secret received from our support team.
+-   Set `clientId` to the FIU app client ID received from our support team. This variable is passed as the `x-client-id` header.
+-   Set `clientSecret` to the FIU app client secret received from our support team. This variable is passed as the `x-client-secret` header.
+-   Set `productInstanceId` to the FIU product instance ID received from our support team. This variable is passed as the `x-product-instance-id` header.
 
 ![](https://storage.googleapis.com/strapi-assets/latest/setu-bsa-variables-1/setu-bsa-variables-1.png)
 
